--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,7 @@
 .mod_structlabel-wrapper {
-    margin-bottom: 1rem;
 }
 
 .mod_structlabel-title {
-    border-bottom: 1px solid #e2e2e2;
-    padding-left: 1rem;
     margin-bottom: 0;
     padding-bottom: 1rem;
     position: relative;
@@ -13,20 +10,19 @@
 .mod_structlabel-title::after {
     content: '';
     position: absolute;
-    background-color: #6ebafb;
-    height: 6px;
-    width: 6px;
-    border-radius: 3px;
-    bottom: -3px;
-    left: -3px;
+    background-color: #e2e2e2;
+    height: 1px;
+    bottom: 0;
+
+    width: 100%; /* Fallback for width with calc. */
+    left: 0; /* Fallback for the left with calc. */
+
+    width: calc(100% + 10px); /* Should be this, unfortunately Moodle strips off calcs with a +. */
+    left: calc(0% + -5px); /* We add this weird one so that it only applies when the width also does. */
 }
 
 .mod_structlabel-contentwrapper {
-    background: #fff;
-    border-right: 1px solid #e2e2e2;
-    border-bottom: 1px solid #e2e2e2;
-    padding: 1rem;
-    margin-left: 1rem;
+    padding: 1rem 0 0;
 }
 
 .mod_structlabel-content {
